[tool.poetry]
name = "kaggle-neuro"
version = "0.1.0"
description = "Kaggle project to analyze multimodal brain MRI features and predict multiple assessments"
authors = ["Amy Lee <lee779@usc.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
jupyter = "^1.0.0"
scikit-learn = "^0.22.2"
numpy = "^1.18.1"
pyyaml = "^5.3"
jupyter_contrib_nbextensions = "^0.5.1"
scipy = "^1.4.1"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"
autopep8 = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
